--- a/templates/apisvctemplate.html
+++ b/templates/apisvctemplate.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Digital base api ">
-    <meta name="author" content="Digital cube">
+    <meta name="description" content="API specification">
+    <meta name="author" content="DigitalCube">
     <link rel="icon" href="favicon.ico">
 
-    <title>Digital cube projects</title>
+    <title>API specification</title>
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
