--- a/templates/apisvctemplate.html
+++ b/templates/apisvctemplate.html
@@ -14,7 +14,8 @@
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <link href="{{static_url('css/style.css')}}" rel="stylesheet">
+    <!-- <link href="{{static_url('css/style.css')}}" rel="stylesheet"> -->
+    <link href="/static/css/style.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="http://getbootstrap.com/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -37,6 +38,7 @@
           <div class="col-md-12">
 
 
+                              {% set g = 0 %}
 
 
 
@@ -51,7 +53,6 @@
                                 {% if app!=items['api_version'] %}
                                 <h3> -{{app}}</h3>
                                 {% end %}
-                              {% set g = 0 %}
                               {% for appc in appl %}
                                 {% set appcall = appl[appc] %}
                                 {% set method = appcall['methods'] %}
