--- a/templates/apisvctemplate.html
+++ b/templates/apisvctemplate.html
@@ -1,4 +1,3 @@
-{% import json %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -37,17 +36,20 @@
 
 <div class="row">
       <div class="col-md-12">
+          {% import json %}
                 {% set g = 0 %}
           {% for num in [1,0] %}
-
               {% set name = items[num]['name']%}
               {% set applications = items[num]['order'] %}
 
                     {% if items[num]['name']!='BASE'  %}
+
                         {% set app_version  = items[num]['data']['APP_VERSION'] %}
+
                     {% else %}
                         <hr>
                         {% set app_version  = items[num]['version'] %}
+
                     {% end %}
 
             <h3>{{ name }} - {{app_version}}</h3>
@@ -216,7 +218,8 @@
 
 
   </div>
-</div></body>
+</div>
+</body>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
